--- a/proyecto_final/reporte/reporte.tex
+++ b/proyecto_final/reporte/reporte.tex
@@ -145,7 +145,7 @@ su eje z como lo muestra la figura \ref{ejes}. También, pueden construirse altos
 hace muy útiles en interiores, en donde pueden pasar por lugares estrechos y dar curvas muy cerradas
 \citep{KarlStol}.  Algunas de sus aplicaciones, pueden ser como guías de excursiones dentro de
 museos, bases de equipo médico dentro de hospitales, para vigilancia (segway) y de limpieza en el
-hogar \citep{Coelho}.
+hogar \cite{Coelho}.
 
 \subsection{Objetivos}
 
@@ -221,7 +221,7 @@ El modelo de robot que se estudia en el presente trabajo se supone con dos motor
 
 %\begin{figure}
 %	\centering
-%	\includegraphics[width=0.6\textwidth]{../pictures/robot_ejes.eps}	
+%	\includegraphics[width=0.6\textwidth]{../pictures/Diagrama_3d_robot.eps}	
 %	\caption{Ejes del Robot}
 %	\label{fig:ejes}
 %\end{figure}
