simulacion flow y nomenclatura con unidades

--- a/proyecto_final/reporte/reporte.tex
+++ b/proyecto_final/reporte/reporte.tex
@@ -104,39 +104,39 @@ realizaron las simulaciones correspondientes para cada modelo, para luego analiz
 
 \begin{description}[labelindent=1cm,labelwidth=2.25cm,align=left]
 %ponerlo en orden alfabetico
-        \item[$L$] Lagrangiano de un sistema
-        \item[$K$] Energía cinética de un sistema
-        \item[$U$] Energía potencial de un sistema
+        \item[$L$] Lagrangiano de un sistema [$J$]
+        \item[$K$] Energía cinética de un sistema [$J$]
+        \item[$U$] Energía potencial de un sistema [$J$]
         \item[$q_j$] Coordenada generalizada
         \item[$Q_j$] Fuerza generalizada
         \item[$n$] Cantidad de grados de libertad de un sistema
-        \item[$J$] Momento de inercia de un cuerpo
-        \item[$m$] Masa de un cuerpo
-        \item[$\vec{v}$] Velocidad del centro de masa de un cuerpo
-        \item[$\omega$] Velocidad angular
-        \item[$k$] Constante de un resorte traslacional
-        \item[$d$] Elongación de un resorte traslacional
-        \item[$h$] Altura del centro de masa de un cuerpo con respecto a la referencia
-        \item[$g$] Constante de la gravedad terrestre
-        \item[$p_0$] Posición del centro geométrico
-        \item[$p_d$] Posición del punto descentralizado
-        \item[$p_g$] Posición del centro de masa
-        \item[$2b$]  Ancho del robot
-        \item[$p_r$] Posición de la rueda derecha
-        \item[$p_l$] Posición de la rueda izquierda 
-        \item[$\varphi_r$] Posición angular de la rueda derecha
-        \item[$\varphi_l$] Posición angular de la rueda izquierda
-        \item[$K$]  Energía cinética
-        \item[$r$] Radio de una rueda
-        \item[$m_c$] Masa del cuerpo del robot
-        \item[$m_w$] Masa de una rueda
-        \item[$I_g$] Momento de inercia del cuerpo alrededor del centro de masa
-        \item[$I_w$] Momento de inercia de una rueda alrededor de su eje central
-        \item[$I_m$] Momento de inercia de una rueda alrededor de un diámetro
-        \item[$\omega$] Rapidez angular de la rotación del robot
-        \item[$\theta$] Orientación del robot
-        \item[$x$] Posición del centro geométrico en el eje X
-        \item[$y$] Posición del centro geométrico en el eje Y
+        \item[$J$] Momento de inercia de un cuerpo [$Nms^2$]
+        \item[$m$] Masa de un cuerpo [$kg$]
+        \item[$\vec{v}$] Velocidad del centro de masa de un cuerpo [$m/s$]
+        \item[$\omega$] Velocidad angular [$rad/s$]
+        \item[$k$] Constante de un resorte traslacional [$N/m$]
+        \item[$d$] Elongación de un resorte traslacional [$m$]
+        \item[$h$] Altura del centro de masa de un cuerpo con respecto a la referencia [$m$]
+        \item[$g$] Constante de la gravedad terrestre [$m/s^2$]
+        \item[$p_0$] Posición del centro geométrico (punto entre las ruedas) [$m$]
+        \item[$p_d$] Posición del punto descentralizado [$m$]
+        \item[$p_g$] Posición del centro de masa [$m$]
+        \item[$2b$]  Ancho del robot [$m$]
+        \item[$p_r$] Posición de la rueda derecha [$m$]
+        \item[$p_l$] Posición de la rueda izquierda [$m$]
+        \item[$\varphi_r$] Posición angular de la rueda derecha [$rad$]
+        \item[$\varphi_l$] Posición angular de la rueda izquierda [$rad$]
+        \item[$K$]  Energía cinética [$J$]
+        \item[$r$] Radio de una rueda [$m$]
+        \item[$m_c$] Masa del cuerpo del robot [$kg$]
+        \item[$m_w$] Masa de una rueda [$kg$]
+        \item[$I_g$] Momento de inercia del cuerpo alrededor del centro de masa [$Nms^2$]
+        \item[$I_w$] Momento de inercia de una rueda alrededor de su eje central [$Nms^2$]
+        \item[$I_m$] Momento de inercia de una rueda alrededor de un diámetro [$Nms^2$]
+        \item[$\omega$] Rapidez angular de la rotación del robot [$rad/s$]
+        \item[$\theta$] Orientación del robot [$rad$]
+        \item[$x$] Posición del centro geométrico en el eje X [$m$]
+        \item[$y$] Posición del centro geométrico en el eje Y [$m$]
        
 \end{description}
 
