--- a/proyecto_final/reporte/informe_ref.bib
+++ b/proyecto_final/reporte/informe_ref.bib
@@ -203,6 +203,14 @@ timestamp = {2014.01.01}
   timestamp = {2009}
 }
 
+@ARTICLE{Conejo,
+  title = {Control lineal estabilizante para sistemas
+subactuados aplicado al Pendubot},
+  author = {C. Conejo, R. Galindo, L. Carrazco},
+  url="https://www.researchgate.net/profile/Leo_Carrazco/publication/220012890_Control_lineal_estabilizante_para_sistemas_subactuados_al_pendubot/links/09e415045cc1a7bd14000000.pdf",
+  school = {Universidad Aut ´ onoma de Nuevo León
+San Nicolás de los Garza}
+}
 @comment{jabref-meta: selector_publisher:}
 
 @comment{jabref-meta: selector_author:}
